--- a/befree-app/app.json
+++ b/befree-app/app.json
@@ -20,7 +20,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff",
-        "config": { "googleMaps": { "apiKey": "YOUR_ANDROID_KEY" } }
+        "config": { "googleMaps": { "apiKey": "AIzaSyCcFrALuExY9ldm2oesfdr9sQUaf5IY8-A" } }
       },
       "edgeToEdgeEnabled": true
     },
