--- a/befree-app/package.json
+++ b/befree-app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
+    "postinstall": "patch-package",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
@@ -28,7 +29,9 @@
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   },
   "private": true
 }
